crates/iql-parser/src/snapshots/issuecraft_ql__tests__select_from_all_entities-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Projects,
        filter: None,
        order_by: None,
        limit: None,
        offset: None,
    },
)
