crates/iql-parser/src/snapshots/issuecraft_ql__tests__single_column_select.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: Named(
            [
                "title",
            ],
        ),
        from: Issues,
        filter: None,
        order_by: None,
        limit: None,
        offset: None,
    },
)
