crates/iql-parser/src/snapshots/issuecraft_ql__tests__special_characters_in_strings.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: ProjectId(
            "test",
        ),
        title: "Special chars: !@#$%^&*()_+-={}[]|:;<>?,./~`",
        kind: Bug,
        description: None,
        priority: None,
        assignee: None,
    },
)
