crates/iql-parser/src/snapshots/issuecraft_ql__tests__string_with_multiple_escapes.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: "test",
        title: "Line1\nLine2\tTab\rReturn\\Backslash",
        kind: Bug,
        description: None,
        priority: None,
        assignee: None,
    },
)
