crates/iql-parser/src/snapshots/issuecraft_ql__tests__whitespace_variations-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: None,
        order_by: None,
        limit: None,
        offset: None,
    },
)
